Refactor the code based on database
